# Raycasting-Engine

./: CMakeLists.txt  main.cpp
headers/: Cell.hpp  Map.hpp  Player.hpp  Ray.hpp  Variable.hpp  World.hpp
python/: map_info_cleaner.py  map_spliter.py
src/: Cell.cpp  Map.cpp  Player.cpp  Ray.cpp  World.cpp
